--- a/src/main/resources/templates/deleteAnimal.html
+++ b/src/main/resources/templates/deleteAnimal.html
@@ -1,10 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Spring MVC</title>
+    <!-- Bootstrap CSS file -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
+
 <body>
-<h1>Hello Browser</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Zoo App</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/animal/getAllAnimals}">Show all animals</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/animal/addAnimal}">add animal</a>
+            </li>
+        </ul>
+    </div>
+    <hr>
+</nav>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-6">
+            <table border="1">
+                <tr>
+                    <th width="20%">Animal Type</th>
+                    <th width="20%">Name</th>
+                    <th width="20%">Food Type</th>
+                    <th width="20%">Food</th>
+                    <th width="20%">Action</th>
+                </tr>
+                <tr th:each="animal : ${animals}">
+                    <td th:text="${{animal.animalType}}">animal type</td>
+                    <td th:text="${{animal.name}}">name</td>
+                    <td th:text="${{animal.foodType}}">food type</td>
+                    <td th:text="${{animal.food}}">food</td>
+                    <td>
+                        <!--<a class="btn btn-secondary" type="button" th:href="@{/animal/{name}/edit(name=${animal.name})}">edit</a>
+                        -->
+                        <a class="btn btn-danger" type="button"
+                           th:href="@{/animal/{name}/delete(id=${animal.name})}">delete</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+
+<!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
